# fastapi-observability-docker-stack

./: .gitignore  README.md  docker-compose.yaml  load.sh
backend/: Dockerfile  gunicorn.conf.py  pyproject.toml
backend/src/: config.py  env.py  logger.py  main.py
backend/src/middleware/: __init__.py  base.py  metrics.py  pyroscope.py  request.py
backend/src/observability/: __init__.py  init.py
backend/src/observability/opentelemetry/: __init__.py  init.py
backend/src/observability/prometheus/: __init__.py  constants.py  init.py
backend/src/observability/pyroscope/: __init__.py  init.py
observability/alertmanager/: config.yaml
observability/alloy/: config.alloy
observability/grafana/provisioning/dashboards/: fastapi.json
observability/grafana/provisioning/datasources/: datasources.yaml
observability/loki/: config.yaml
observability/vmalert/rules/: fastapi.yaml
