[project]
name = "backend"
version = "0.1.0"
description = "Production observability example backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "starlette>=0.40.0",
    "gunicorn>=23.0.0",
    "prometheus-client>=0.21.0",
    "pyroscope-io>=0.8.14",
    "pyroscope-otel>=0.4.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
]
